added nearest airport to my food store

--- a/index.html
+++ b/index.html
@@ -17,3 +17,14 @@
     Pizza Hut is located at <b>732 S Main St, Maryville, MO 64468</b>.Opposite to that store there is an another store 
     named <b>Pagliai's Pizza</b>.And there are many other houses surrounding Pizza Hut.After we go a half mile further
     we get wallmart.
+
+    <hr> <h1>Kansas City International Airport</h1>
+
+* Get on I-29 N from NW 120th St 3 min (1.2 mi)
+
+* Follow I-29 N to US-71 N in Jefferson Township. Take exit 56A from I-29 N 38 min (43.5 mi)
+
+* Follow US-71 N to your destination in Maryville 33 min (31.9 mi)
+
+* Now Pizza Hut will be on the left side 
+
