added nearest airport to my food store

--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
     we get wallmart.
 
     <hr> <h1>Kansas City International Airport</h1>
+<ol>
+<li> Get on I-29 N from NW 120th St 3 min (1.2 mi)</li>
 
-* Get on I-29 N from NW 120th St 3 min (1.2 mi)
+<li> Follow I-29 N to US-71 N in Jefferson Township. Take exit 56A from I-29 N 38 min (43.5 mi)</li>
+<ol>
+    
+<li> Take exit 56A for US-71 toward US-59 N/Maryville</li>
 
-* Follow I-29 N to US-71 N in Jefferson Township. Take exit 56A from I-29 N 38 min (43.5 mi)
+</ol>
+<li> US-71 N to your destination in Maryville 33 min (31.9 mi)</li>
 
-* Follow US-71 N to your destination in Maryville 33 min (31.9 mi)
-
-* Now Pizza Hut will be on the left side 
-
+<li> Pizza Hut will be on the left side </li>
+</ol>
