addded my favourite food that i recommend for others

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <li> Follow I-29 N to US-71 N in Jefferson Township. Take exit 56A from I-29 N 38 min (43.5 mi)</li>
 <ol>
-    
+
 <li> Take exit 56A for US-71 toward US-59 N/Maryville</li>
 
 </ol>
@@ -32,3 +32,8 @@
 
 <li> Pizza Hut will be on the left side </li>
 </ol>
+
+<h1> Food items I reccomend</h1>
+
+<ul> NEW Spicy Veggie</ul>
+<ul> Cheese Pizz</ul>
