addded sports that i recommend

--- a/index.html
+++ b/index.html
@@ -36,4 +36,37 @@
 <h1> Food items I reccomend</h1>
 
 <ul> NEW Spicy Veggie</ul>
-<ul> Cheese Pizz</ul>
+<ul> Cheese Pizza</ul>
+
+<a href="./aboutme.html">aboutme</a>
+
+<h6>Sports I recommend</h6>
+<p>Sports pertains to any form of competitive physical activity or game[1] that aims to use, maintain or improve physical ability and skills while providing enjoyment to participants and, in some cases, entertainment to spectators.
+ Below table created gives the first column of name of sports,second column gives the location,tird column gives the amount of money required.</p>
+ <table>
+    <tr>
+      <th>Name of the sport</th>
+      <th>Location of the sport</th>
+      <th>Price of the sport</th>
+    </tr>
+    <tr>
+      <td>Table Tennis</td>
+      <td>West Bengal</td>
+      <td>$100</td>
+    </tr>
+    <tr>
+      <td>Swimming</td>
+      <td>Kerala</td>
+      <td>$120</td>
+    </tr>
+    <tr>
+        <td>Archery</td>
+        <td>Bhutan</td>
+        <td>$170</td>
+      </tr>
+      <tr>
+        <td>Wrestling</td>
+        <td>India</td>
+        <td>$190</td>
+      </tr>
+  </table>
