addded sports that i recommend

--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
 <h6>Sports I recommend</h6>
 <p>Sports pertains to any form of competitive physical activity or game[1] that aims to use, maintain or improve physical ability and skills while providing enjoyment to participants and, in some cases, entertainment to spectators.
  Below table created gives the first column of name of sports,second column gives the location,tird column gives the amount of money required.</p>
+ <html>
+<style>
+table, th, td {
+  border:1px solid black;
+}
+</style>
+<body>
+
+<h2>A basic HTML table</h2>
+
+<table style="width:100%">
  <table>
     <tr>
       <th>Name of the sport</th>
