--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ table, th, td {
 </style>
 <body>
 
-<h2>A basic HTML table</h2>
+<h2>Table for sports</h2>
 
 <table style="width:100%">
  <table>
