--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Hello</title>
     </head>
     <body>
-      <a href="./bonus.html">aboutme</a>
+      <a href="./bonus.html">bonus</a>
         <h1>Shashank Pasumarthi</h1>
         <h6> Pizza Hut </h6>
         <p>
