--- a/bonus.html
+++ b/bonus.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
-            Pittsburgh Paragon
-        </title>
+        <title>Mascot</title>
     </head>
     <body>
-        <h1>
-            Mascot name is 'Pittsburgh Paragon'. Which named from one of the Cities in USA which is Pittsburgh and Paragon stands for they are model of perfection. 
+        <h3><i>Pittsburgh Paragon</i></h3>
+        <p>
+            Mascot name is 'Pittsburgh Paragon'. 
+            Which named from one of the Cities in USA which is Pittsburgh and the Paragon  stands for they are they are model of perfection.
             Animal chosen is Saber-Toothed Tiger which is  It is one of the most famous prehistoric mammals and the best known saber-toothed cat. Sport is Badminton.
-
-            <b>Fun Facts About Mascot</b>  
+        </p>
+        <h4>FUN Facts About Mascot</h4>
+        <ol>
             <li>The Smilodon started to roam the lands around 37 million years ago.</li>
-            <li>Their canines could grow over 7 inches in length</li>
-            <li>They can open their jaws up to 120°</li>
-
-            <img src="Saber-Toothed Tiger.jpg" alt="Saber-Toothed Tiger" width="500" height="333">
-            
-           <a href="./index.html">aboutme</a>
-        </h1>
+           <li>Their canines could grow over 7 inches in length</li>
+           <li>They can open their jaws up to 120°</li>
+        </ol>
+        <img src="./SaberToothedTiger.jpg" alt="SaberToothedTiger" width="1080" height="400"><br><br>
+        <a href="./index.html">Here's a link to Index.Html</a>
     </body>
 </html>
